--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@ h2{
 }
 .yaa{
     background-image: url(../imgs/los-jugadores-del-barca-celebrando-un-gol.jpeg);
-    background-size: cover;
+    background-size: 100% 100%;
 }
 h1{
     color: white;
